--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   font-family: Arial, sans-serif;
 }
 
+body {
+  font-family: "Poppins", sans-serif;
+  padding-top: 4rem;
+  background-color: #f4f4f4;
+}
+
 a {
   color: black;
   text-decoration: none;
