--- a/src/components/ImageMerger.css
+++ b/src/components/ImageMerger.css
@@ -92,7 +92,10 @@
 
 /* Slider */
 .image-collage__slider {
-  -webkit-appearance: none;
+  appearance: none; /* Standard property */
+  -webkit-appearance: none; /* WebKit browsers */
+  -moz-appearance: none; /* Firefox */
+
   width: 100%;
   height: 8px;
   border-radius: 5px;
@@ -100,6 +103,25 @@
   outline: none;
   opacity: 0.9;
   transition: opacity 0.2s ease-in-out;
+
+  /* Additional styles for better compatibility */
+  &::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  &::-moz-range-thumb {
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    border-radius: 50%;
+    cursor: pointer;
+  }
 }
 
 .image-collage__slider:hover {
